syntax = "proto3";
package proto;
option go_package = "../proto";

service MysqlManager {
    rpc GetComposes(GetComposesRequest) returns (GetComposesResponse);
    rpc Operation(OperationRequest) returns (MysqlCommonResponse);
    rpc SetPort(SetPortRequest) returns (MysqlCommonResponse);
    rpc GetConf(GetConfRequest) returns (GetConfResponse);
    rpc SetConf(SetConfRequest) returns (MysqlCommonResponse);
}

message MysqlCommonResponse {
  bool success = 1;
  string error = 2;
}

message GetComposesRequest {
    uint32 host_id = 1;
    int32 page = 2;
    int32 page_size = 3;
}

message GetComposesResponse {
    int64 total = 1;
    repeated ComposesInfo items = 2;
}

message ComposesInfo {
    string name = 1;
    string version = 2;
    string port = 3;
    string status = 4;
}

message OperationRequest {
    uint32 host_id = 1;
    string name = 2;
    string operation = 3;
}

message SetPortRequest {
    uint32 host_id = 1;
    string name = 2;
    string port = 3;
}

message GetConfRequest {
    uint32 host_id = 1;
    string name = 2;
}

message GetConfResponse {
    string content = 1;
}

message SetConfRequest {
    uint32 host_id = 1;
    string name = 2;
    string content = 3;
}

